tests/baselines/reference/deeplyNestedAssignabilityIssue.errors.txt
[96mtests/cases/compiler/deeplyNestedAssignabilityIssue.ts[0m:[93m22[0m:[93m17[0m - [91merror[0m[90m TS2322: [0mType '{}' is not assignable to type 'A'.
  Property 'a' is missing in type '{}'.

[7m22[0m                 thing: {}
[7m  [0m [91m                ~~~~~[0m

  [96mtests/cases/compiler/deeplyNestedAssignabilityIssue.ts[0m:[93m9[0m:[93m17[0m
    [7m9[0m                 thing: A;
    [7m [0m [96m                ~~~~~[0m
    The expected type comes from property 'thing' which is declared here on type '{ thing: A; }'
[96mtests/cases/compiler/deeplyNestedAssignabilityIssue.ts[0m:[93m25[0m:[93m17[0m - [91merror[0m[90m TS2322: [0mType '{}' is not assignable to type 'A'.
  Property 'a' is missing in type '{}'.

[7m25[0m                 another: {}
[7m  [0m [91m                ~~~~~~~[0m

  [96mtests/cases/compiler/deeplyNestedAssignabilityIssue.ts[0m:[93m12[0m:[93m17[0m
    [7m12[0m                 another: A;
    [7m  [0m [96m                ~~~~~~~[0m
    The expected type comes from property 'another' which is declared here on type '{ another: A; }'


==== tests/cases/compiler/deeplyNestedAssignabilityIssue.ts (2 errors) ====
    interface A {
        a: number;
    }
    
    interface Large {
        something: {
            another: {
                more: {
                    thing: A;
                }
                yetstill: {
                    another: A;
                }
            }
        }
    }
    
    const x: Large = {
        something: {
            another: {
                more: {
                    thing: {}
                    ~~~~~
!!! error TS2322: Type '{}' is not assignable to type 'A'.
!!! error TS2322:   Property 'a' is missing in type '{}'.
!!! related TS6500 tests/cases/compiler/deeplyNestedAssignabilityIssue.ts:9:17: The expected type comes from property 'thing' which is declared here on type '{ thing: A; }'
                },
                yetstill: {
                    another: {}
                    ~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type 'A'.
!!! error TS2322:   Property 'a' is missing in type '{}'.
!!! related TS6500 tests/cases/compiler/deeplyNestedAssignabilityIssue.ts:12:17: The expected type comes from property 'another' which is declared here on type '{ another: A; }'
                }
            }
        }
    }
    